@@ -1,0 +1,108 @@
+/* Copyright (C) 2007 Thorsten Kukuk
+   Author: Thorsten Kukuk <kukuk@thkukuk.de>
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License version 2 as
+   published by the Free Software Foundation.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software Foundation,
+   Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
+
+#include <stdio.h>
+#include <string.h>
+#include <ctype.h>
+
+#include "pam-config.h"
+#include "pam-module.h"
+
+
+static int
+parse_config_cracklib (pam_module_t *this, char *args, write_type_t type)
+{
+  option_set_t *opt_set = this->get_opt_set( this, type );
+
+  if (debug)
+    printf("**** parse_config_cracklib (%s): '%s'\n", type2string(type),
+           args?args:"");
+
+  opt_set->enable (opt_set, "is_enabled", TRUE);
+
+  while (args && strlen (args) > 0)
+    {
+      char *cp = strsep (&args, " \t");
+      if (args)
+	while (isspace ((int)*args))
+	  ++args;
+
+      if (strcmp (cp, "debug") == 0)
+        opt_set->enable (opt_set, "debug", TRUE);
+      else if (strncmp (cp, "minlen=", 7) == 0)
+	opt_set->set_opt (opt_set, "minlen", strdup(&cp[7]));
+      else if (strncmp (cp, "retry=", 6) == 0)
+	opt_set->set_opt (opt_set, "retry", strdup(&cp[6]));
+      else if (strncmp (cp, "dictpath=", 9) == 0)
+	opt_set->set_opt (opt_set, "dictpath", strdup(&cp[9]));
+      else if (strcmp (cp, "use_first_pass") == 0)
+        { /* will be ignored */ }
+      else if (strcmp (cp, "use_authtok") == 0)
+        { /* will be ignored */ }
+      else
+        print_unknown_option_error ("pam_cracklib.so", cp);
+
+    }
+  return 1;
+}
+
+static int
+write_config_cracklib (pam_module_t *this, enum write_type op, FILE *fp)
+{
+  option_set_t *opt_set = this->get_opt_set (this, op);
+  const char *cp;
+
+  if (debug)
+    printf ("**** write_config_cracklib (...)\n");
+
+  /* pam_cracklib is only used in password part.  */
+  if (op != PASSWORD)
+    return 0;
+
+  /* pam_cracklib is not enabled.  */
+  if (!opt_set->is_enabled (opt_set, "is_enabled"))
+    return 0;
+
+  fprintf (fp, "password\trequisite\tpam_cracklib.so\t");
+  if (opt_set->is_enabled (opt_set, "debug"))
+    fprintf (fp, "debug ");
+  cp = opt_set->get_opt (opt_set, "dictpath");
+  if (cp)
+    fprintf (fp, "dictpath=%s ", cp);
+  cp = opt_set->get_opt (opt_set, "minlen");
+  if (cp)
+    fprintf (fp, "minlen=%s ", cp);
+  cp = opt_set->get_opt (opt_set, "retry");
+  if (cp)
+    fprintf (fp, "retry=%s ", cp);
+
+  fprintf (fp, "\n");
+
+  return 0;
+}
+
+
+
+/* ---- contruct module object ---- */
+DECLARE_BOOL_OPTS_2(is_enabled, debug);
+DECLARE_STRING_OPTS_3(dictpath, retry, minlen);
+DECLARE_OPT_SETS;
+/* at last construct the complete module object */
+pam_module_t mod_pam_cracklib = { "pam_cracklib.so", opt_sets,
+  &parse_config_cracklib,
+  &def_print_module,
+  &write_config_cracklib,
+  &get_opt_set};
