@@ -1,4 +1,5 @@
 extern pam_module_t mod_pam_ccreds;
+extern pam_module_t mod_pam_cracklib;
 extern pam_module_t mod_pam_env;
 extern pam_module_t mod_pam_krb5;
 extern pam_module_t mod_pam_ldap;
@@ -12,6 +13,7 @@ extern pam_module_t mod_pam_winbind;
 
 pam_module_t *common_module_list[] = {
   &mod_pam_ccreds,
+  &mod_pam_cracklib,
   &mod_pam_env,
   &mod_pam_krb5,
   &mod_pam_ldap,
@@ -46,6 +48,7 @@ static pam_module_t *module_list_auth[] = {
 static pam_module_t *module_list_password[] = {
   &mod_pam_winbind,
   &mod_pam_pwcheck,
+  &mod_pam_cracklib,
   &mod_pam_unix2,
   &mod_pam_krb5,
   &mod_pam_ldap,
